# dwn

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  RELEASES.md  clippy.toml  deny.toml  rust-toolchain.toml  rustc-ice-2024-11-10T02_00_21-27582.txt  rustc-ice-2024-11-10T02_00_21-27583.txt  rustc-ice-2024-11-10T02_00_36-27605.txt  rustc-ice-2024-11-10T02_00_36-27606.txt  rustc-ice-2024-11-10T02_00_46-27626.txt  rustc-ice-2024-11-10T02_00_46-27627.txt  temp.txt
.config/: insta.yaml
.github/workflows/: ci.yaml  publish.yaml  verify.yaml
crates/datastore/: Cargo.toml  README.md
crates/datastore/src/: cid.rs  data.rs  index.rs  ipfs.rs  lib.rs  query.rs  store.rs
crates/dwn-test/: Cargo.toml
crates/dwn-test/protocols/: friend-role.json
crates/dwn-test/src/: keystore.rs  lib.rs  provider.rs  scenarios.rs  store.rs
crates/dwn-test/src/provider/: block_store.rs  event_log.rs  event_stream.rs  key_store.rs  keystore.rs  message_store.rs  task_store.rs
crates/dwn-test/src/provider/data/: alice_did.json  bob_did.json
crates/dwn-test/src/scenarios/: author_delegated_grant.rs  owner_delegated_grant.rs  owner_signature.rs
crates/dwn-test/src/scenarios/snapshots/: dwn_test__scenarios__author_delegated_grant__query.snap  dwn_test__scenarios__owner_signature__alice_read.snap
crates/dwn-test/src/store/: message.rs
crates/dwn-types/: Cargo.toml  README.md
crates/dwn-types/src/: event.rs  messages.rs  permissions.rs  schema.rs
crates/serialize/: Cargo.toml  README.md
crates/serialize/src/: engine.rs  lib.rs  surreal.rs  surrealdb.rs
crates/test-node/: Cargo.toml
crates/test-node/src/: event_stream.rs  keystore.rs  lib.rs  provider.rs
crates/test-node/src/provider/: block_store.rs  event_stream.rs  key_store.rs  keystore.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: datastore.rs  identity.rs  keystore.rs  lib.rs  provider.rs  signer.rs  store.rs  test_data.rs
crates/test-utils/src/store/: block.rs  data.rs  event.rs  message.rs  protocol.json  task.rs
crates/tests/: Cargo.toml  README.md
crates/tests/src/: author_delegated_grant.rs  owner_delegated_grant.rs  owner_signature.rs
dwn-client/: Cargo.toml
dwn-client/src/: data.rs  endpoint.rs
dwn-msg/: Cargo.toml
dwn-msg/src/: authorization.rs  lib.rs  messages.rs  records.rs  schema.rs  store.rs
dwn-msg/src/messages/: query.rs  read.rs
dwn-node/: Cargo.toml
dwn-node/src/: client.rs  lib.rs  messages.rs  protocols.rs  records.rs
dwn-node/src/client/: protocols.rs  (+1 more)
dwn-node/tests/: messages_query.rs  messages_read.rs  messages_subscribe.rs  protocols_configure.rs  protocols_query.rs  records_delete.rs  records_query.rs  records_read.rs  records_subscribe.rs  records_write.rs
dwn-server/: Cargo.toml
dwn-server/src/: permissions.rs  protocols.rs  store.rs  utils.rs
dwn-server/tests/: messages_query.rs  messages_read.rs  messages_subscribe.rs  protocols_configure.rs  protocols_query.rs  records_delete.rs  records_query.rs  records_read.rs  records_subscribe.rs  records_write.rs
examples/: axum.rs  client.rs  http.rs  hyper.rs  json_rpc.rs  protocol.json
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/axum/src/provider/: keystore.rs
examples/dwn/: Cargo.toml
examples/dwn/src/: main.rs
examples/dwn/src/provider/: block_store.rs  event_stream.rs
examples/hyper/: Cargo.toml
examples/hyper/src/: main.rs
examples/keystore/: mod.rs
examples/kms/: mod.rs
examples/protocols/: Cargo.toml
examples/provider/: mod.rs
examples/records/: Cargo.toml  main.rs
examples/records/src/: main.rs
scenarios/: author_delegated_grant.rs
scenarios/snapshots/: dwn_test__scenarios__author_delegated_grant__configure.snap
schemas/interface-methods/: records-write-unidentified.json  records-write.json
src/: api.rs  auth.rs  authorization.rs  authorize.rs  cid.rs  client.rs  clients.rs  data.rs  data_stream.rs  endpoint.rs  endpoint1.rs  error.rs  event.rs  grants.rs  handlers.rs  hd_key.rs  infosec.rs  interfaces.rs  lib.rs  messages.rs  permission.rs  permissions.rs  protocols.rs  provider.rs  query.rs  records.rs  schema.rs  service.rs  store.rs  task_manager.rs  tasks.rs  utils.rs
src/auth/: grant.rs
src/client/: encryption.rs  grants.rs  messages.rs  protocols.rs  records.rs
src/clients/: grants.rs  messages.rs  protocols.rs  records.rs
src/grants/: verify.rs
src/handlers/: messages_query.rs  messages_read.rs  messages_subscribe.rs  protocols_configure.rs  protocols_query.rs  records_delete.rs  records_query.rs  records_read.rs  records_subscribe.rs  records_write.rs  verify_grant.rs  verify_protocol.rs
src/interfaces/: grants.rs  messages.rs  protocols.rs  records.rs
src/messages/: message.rs  query.rs  read.rs  subscribe.rs
src/permissions/: grant.rs  protocol.rs
src/protocols/: configure.rs  default_protocol.json  integrity.rs  query.rs
src/records/: delete.rs  encryption.rs  integrity.rs  protocol.rs  protocol_auth.rs  query.rs  read.rs  subscribe.rs  write.rs
src/store/: block.rs  data.rs  event_log.rs  index.rs  message.rs  serializer.rs  task.rs
src/utils/: cid.rs  ipfs.rs  uri.rs
supply-chain/: README.md  audits.toml  config.toml
tests/: author_delegated_grant.rs  delegated_grant.rs  feature_client.rs  messages_query.rs  messages_read.rs  messages_subscribe.rs  owner_delegated_grant.rs  owner_signature.rs  protocols_configure-td.rs  protocols_configure.rs  protocols_query-td.rs  protocols_query.rs  records-delete.rs  records_delete.rs  records_query.rs  records_read-td.rs  records_read.rs  records_subscribe.rs  records_write-td.rs  records_write.rs  test.rs
tests/protocols/: allow-any.json  allow_any.json  minimal.json
tests/snapshots/: author_delegated_grant__configure.snap  author_delegated_grant__query.snap  owner_signature__alice_read.snap  owner_signature__bob_data.snap  owner_signature__read.snap  owner_signature__write.snap  records_query__attestation.snap  records_query__authorization.snap  records_query__return_values.snap  records_read__read.snap
tests/web_node/: mod.rs  provider.rs
(+18 files in other folders)
