[package]
name = "credibil-dwn"
description = "Decentralized Web Node (DWN)"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["client", "server"]
# Includes DWN client features such as request builders.
client = []
# Includes DWN server features such handlers.
server = ["dep:async-recursion", "dep:tokio"]

[dependencies]
anyhow.workspace = true
async-recursion = { version = "1.1.1", optional = true }
base64ct = { version = "1.8.0", features = ["std"] }
cfg-if = "1.0.3"
chrono.workspace = true
ciborium.workspace = true
cid.workspace = true
credibil-api.workspace = true
credibil-binding.workspace = true
credibil-ecc.workspace = true
credibil-encoding.workspace = true
credibil-jose.workspace = true
datastore.workspace = true
derive_more = { version = "2.0.1", features = ["display"] }
futures.workspace = true
hkdf = "0.12.4"
http = "1.3.1"
http-body-util = "0.1"
ipld-core.workspace = true
jsonschema = { version = "0.33.0", default-features = false, features = ["resolve-file"] }
multihash-codetable.workspace = true
rand = "0.9.2"
serde.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { workspace = true, optional = true }
tracing = "0.1.41"
uuid.workspace = true
zeroize = "1.8.1"

[dev-dependencies]
axum = { version = "0.8.4", features = ["macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
test-utils = { path = "crates/test-utils" }
tower-http = { version = "0.6.6", features = ["cors", "set-header", "trace"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[[example]]
name = "json_rpc"
path = "examples/json_rpc.rs"
# required-features = ["client", "server"]

[[example]]
name = "http"
path = "examples/http.rs"
# required-features = ["client", "server"]

# -----------------------------------------------
# Workspace
# -----------------------------------------------
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["web-programming", "embedded", "database"]
edition = "2024"
exclude = [".*", "/docs"]
homepage = "https://credibil.io"
keywords = ["decentralized", "didcomm", "web", "node", "storage"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/credibil/dwn"
rust-version = "1.88"
version = "0.2.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# clippy::all = correctness, suspicious, style, complexity, perf
# not using (yet) -Dclippy::restriction
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = "0.2.2"
cid = { version = "0.11.1", features = ["alloc"] }
credibil-api = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
credibil-binding = { git = "https://github.com/credibil/key.git", tag = "v0.2.0" }
credibil-core = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
credibil-dwn = { path = "." }
credibil-ecc = { git = "https://github.com/credibil/key.git", tag = "v0.2.0" }
credibil-encoding = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
credibil-jose = { git = "https://github.com/credibil/key.git", tag = "v0.2.0" }
datastore = { path = "crates/datastore" }
futures = "0.3.31"
ipld-core = "0.4.2"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_ipld_dagcbor = "0.6.3"
serde_json = { version = "1.0.145", features = ["alloc"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }

# [patch."https://github.com/credibil/core"]
# credibil-core = { path = "../core" }

# [patch."https://github.com/credibil/key"]
# credibil-ecc = { path = "../key/ecc" }
# credibil-jose = { path = "../key/jose" }
# credibil-binding = { path = "../key/binding" }

[profile.release]
# optimize for small code size
lto = true
opt-level = "s"
strip = true

[profile.test]
opt-level = 1
# debug-assertions = true
