[package]
name = "credibil-dwn"
description = "Decentralized Web Node (DWN)"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["client", "server"]
# Includes DWN client features such as request builders.
client = []
# Includes DWN server features such handlers.
server = ["dep:async-recursion", "dep:tokio"]

[dependencies]
anyhow.workspace = true
async-recursion = { version = "1.1.1", optional = true }
base64ct = { version = "1.8.0", features = ["std"] }
cfg-if = "1.0.3"
chrono.workspace = true
ciborium.workspace = true
cid.workspace = true
credibil-api.workspace = true
credibil-binding.workspace = true
credibil-ecc.workspace = true
credibil-encoding.workspace = true
credibil-jose.workspace = true
datastore.workspace = true
derive_more = { version = "2.0.1", features = ["display"] }
futures.workspace = true
hkdf = "0.12.4"
http = "1.3.1"
http-body-util = "0.1"
ipld-core.workspace = true
jsonschema = { version = "0.33.0", default-features = false, features = ["resolve-file"] }
multihash-codetable.workspace = true
rand = "0.9.2"
serde.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { workspace = true, optional = true }
tracing = "0.1.41"
uuid.workspace = true
zeroize = "1.8.1"

[dev-dependencies]
axum = { version = "0.8.4", features = ["macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
test-utils = { path = "crates/test-utils" }
tower-http = { version = "0.6.6", features = ["cors", "set-header", "trace"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[[example]]
name = "json_rpc"
path = "examples/json_rpc.rs"
# required-features = ["client", "server"]

[[example]]
name = "http"
path = "examples/http.rs"
# required-features = ["client", "server"]

# -----------------------------------------------
# Workspace
# -----------------------------------------------
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["web-programming", "embedded", "database"]
edition = "2024"
exclude = [".*", "/docs"]
homepage = "https://credibil.io"
keywords = ["decentralized", "didcomm", "web", "node", "storage"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/credibil/dwn"
rust-version = "1.90"
version = "0.4.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
missing_docs = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
nursery = "warn"
pedantic = "warn"
cargo = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = "0.2.2"
cid = { version = "0.11.1", features = ["alloc"] }
futures = "0.3.31"
ipld-core = "0.4.2"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_ipld_dagcbor = "0.6.4"
serde_json = { version = "1.0.145", features = ["alloc"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }

# credibil registry
credibil-api = { version = "0.2.1", registry = "credibil" }
credibil-binding = { version = "0.3.0", registry = "credibil" }
credibil-core = { version = "0.2.1", registry = "credibil" }
credibil-ecc = { version = "0.3.0", registry = "credibil" }
credibil-encoding = { version = "0.2.1", registry = "credibil" }
credibil-jose = { version = "0.3.0", registry = "credibil" }

# internal references
credibil-dwn = { path = ".", version = "0.4.0", registry = "credibil" }
datastore = { path = "crates/datastore", version = "0.4.0", registry = "credibil" }

# [patch."https://github.com/credibil/core"]
# credibil-core = { path = "../core" }

[profile.release]
# optimize for small code size
lto = true
opt-level = "s"
strip = true

[profile.test]
opt-level = 1
# debug-assertions = true
