[package]
name = "vercre-dwn-client"
description = "Decentralized Web Node (DWN)"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow.workspace = true
async-recursion = "1.1.1"
base64ct.workspace = true
chrono = { version = "0.4.39", features = ["serde"] }
ciborium = "0.2.2"
cid.workspace = true
derive_more = { version = "1.0.0", features = ["display"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures.workspace = true
hkdf = "0.12.4"
http.workspace = true
jsonschema = { version = "0.28.1", default-features = false, features = ["resolve-file"] }
libipld = "0.16.0"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
thiserror = "2.0.11"

uuid = { version = "1.11.1", features = ["fast-rng", "v4"] }
vercre-did.workspace = true
vercre-infosec.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

tokio.workspace = true
# tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
dwn-test.workspace = true
insta.workspace = true



