[package]
name = "datastore"
edition = "2024"
publish = false
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
ciborium.workspace = true
cid = { version = "0.11.1", features = ["alloc"] }
ipld-core = "0.4.2"
multihash-codetable.workspace = true
serde.workspace = true
serde_ipld_dagcbor = "0.6.3"
