[package]
name = "datastore"
edition = "2024"
publish = false
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ciborium.workspace = true
cid.workspace = true
ipld-core.workspace = true
multihash-codetable.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
