[package]
name = "datastore"
description = "Datastore module for DWN"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ciborium.workspace = true
cid.workspace = true
ipld-core.workspace = true
multihash-codetable.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
