[package]
name = "test-node"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
async-nats = "0.38.0"
base64ct.workspace = true
blockstore = "0.7.1"
cid.workspace = true
dwn-node.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures.workspace = true
insta.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
vercre-infosec.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
