[package]
name = "test-node"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
async-nats = "0.38.0"
base64ct.workspace = true
blockstore = "0.7.1"
cid.workspace = true
dwn-node.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
insta.workspace = true
multibase.workspace = true
rand.workspace = true
serde_json.workspace = true
sha2.workspace = true
vercre-did.workspace = true
vercre-infosec.workspace = true
x25519-dalek.workspace = true
