[package]
name = "test-node"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
async-nats = "0.39.0"
base64ct.workspace = true
blockstore = "0.7.1"
cid.workspace = true
credibil-infosec.workspace = true
credibil-dwn = { workspace = true, features = ["server"] }
ed25519-dalek.workspace = true
futures.workspace = true
multibase.workspace = true
rand.workspace = true
serde_json.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
