[package]
name = "test-utils"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
async-nats = "0.42.0"
blockstore = "0.7.1"
ciborium.workspace = true
cid.workspace = true
credibil-binding.workspace = true
credibil-core.workspace = true
credibil-dwn.workspace = true
credibil-ecc.workspace = true
credibil-jose.workspace = true
dashmap = "6.1.0"
datastore.workspace = true
futures.workspace = true
ipld-core.workspace = true
multihash-codetable.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid = "1.2.1"
uuid.workspace = true
