[package]
name = "dwn"
edition.workspace = true
publish = false

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64ct.workspace = true
blockstore.workspace = true
cid.workspace = true
credibil-dwn.workspace = true
credibil-infosec.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
multibase.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.2", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
x25519-dalek.workspace = true
