[package]
name = "records"
edition.workspace = true
publish = false
# rust-version.workspace = true
# version.workspace = true

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb = { version = "1.5.5", features = ["kv-mem"] }
test-utils.workspace = true
tokio.workspace = true
vercre-dwn = { path = "../.." }

[dev-dependencies]
